# ppt-master-cli

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_CN.md  SECURITY.md  index.html  pyproject.toml  requirements.txt  viewer.html
docs/: faq.md  technical-design.md  why-ppt-master.md
docs/zh/: faq.md  technical-design.md  why-ppt-master.md
examples/: README.md
projects/: README.md
src/pptmaster/: __init__.py  __main__.py  _paths.py  cli.py
src/pptmaster/scripts/: config.py  create_project.py  finalize_svg.py  generate_examples_index.py  image_gen.py  project_manager.py  project_utils.py  rotate_images.py  svg_to_pptx.py  update_repo.py
src/pptmaster/scripts/source_to_md/: web_to_md.cjs
src/pptmaster/scripts/svg_finalize/: embed_icons.py
src/pptmaster/scripts/svg_to_pptx/: pptx_cli.py  pptx_dimensions.py
